# gene-pathway-reasoning-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: report.md
src/agent/: llm_agent.py
src/config/: settings.py
src/data/: indexer.py  models.py  parser.py
src/services/: hypothesis_generator.py
src/ui/: app.py
src/ui/templates/: index.html
tests/: test_app.py  test_hypothesis_generator.py  test_indexer.py  test_llm_agent.py  test_parser.py
